--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /coverage
 
 # production
-/build
+client/build
 
 # misc
 .DS_Store
@@ -30,3 +30,4 @@ yarn-error.log*
 
 # serverside
 server/env
+__pycache__
