--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
+    "victory": "^36.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
